--- a/requirements.txt
+++ b/requirements.txt
@@ -104,6 +104,7 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.23.1
+scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
 Send2Trash==1.8.3
@@ -115,6 +116,7 @@ stack-data==0.6.3
 statsmodels==0.14.4
 sweetviz==2.3.1
 terminado==0.18.1
+threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.4.2
 tqdm==4.67.1
